[package]
name = "fqgrep"
authors = ["Nils Homer <nils@fulcrumgenomics.com>", "Seth Stadick <seth@fulcrumgenomics.com>"]
version = "0.1.1-alpha.1"
edition = "2018"
license = "MIT"
description = "Search a pair of fastq files for reads that match a given ref or alt sequence"
homepage = "https://github.com/fulcrumgenomics/fqgrep"
documentation = "https://docs.rs/fqgrep"
repository = "https://github.com/fulcrumgenomics/fqgrep"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "fastq"]

[lib]
name = "fqgrep_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "fqgrep"
path = "src/main.rs"


[profile.release]
lto = true

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.44"
bitvec = "1.0.1"
bstr = "0.2.17"
csv = "1.1.6"
env_logger = "0.9.0"
flate2 = {version = "1.0.22", default-features = false, features = ["zlib-ng-compat"]}
flume = "0.10.9"
gzp = "0.9.1"
isatty = "0.1.9"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
mimalloc = {version = "0.1.26", default-features = false}
num_cpus = "1.13.0"
parking_lot = "0.11.2"
proglog = {version = "0.3.0", features = ["pretty_counts"]}
rayon = "1.5.1"
regex = "1.6.0"
seq_io = "0.3.1"
serde = {version = "1.0.130", features = ["derive"]}
structopt = "0.3.23"

[build-dependencies]
built = {version ="0.5.1", features = ["git2"]}

[dev-dependencies]
fgoxide = "0.1.3"
seq_io = "0.3.1"
tempdir = "0.3"
