[package]
name = "fqgrep"
authors = ["Nils Homer <nils@fulcrumgenomics.com>", "Seth Stadick <seth@fulcrumgenomics.com>"]
version = "1.0.3"
edition = "2024"
license = "MIT"
description = "Search a pair of fastq files for reads that match a given ref or alt sequence"
homepage = "https://github.com/fulcrumgenomics/fqgrep"
documentation = "https://docs.rs/fqgrep"
repository = "https://github.com/fulcrumgenomics/fqgrep"
readme = "README.md"
categories = ["science"]
keywords = ["bioinformatics", "fastq"]

[lib]
name = "fqgrep_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "fqgrep"
path = "src/main.rs"


[profile.release]
lto = true

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.97"
bitvec = "1.0.1"
bstr = "0.2.17"
clap = { version = "4.5.31", features = ["derive", "unstable-markdown"] }
csv = "^1, <1.2"
env_logger = "0.9.3"
flate2 = {version = "1.1.0", default-features = false, features = ["zlib-ng"]}
gzp = "1.0.1"
isatty = "0.1.9"
itertools = "0.10.5"
lazy_static = "1.5.0"
libz-ng-sys = "1.1.21"
log = "0.4.26"
mimalloc = {version = "0.1.43", default-features = false}
num_cpus = "1.16.0"
parking_lot = "0.11.2"
proglog = {version = "0.3.0", features = ["pretty_counts"]}
regex = {version = "1.11.1", default-features = false, features = ["perf", "perf-onepass", "perf-inline", "perf-literal"]}
# for https://github.com/markschl/seq_io/pull/23
#seq_io = "0.3.3"
seq_io = { git = "https://github.com/nh13/seq_io.git", rev = "640160566a87b4d26e610a92026600b02218303d" }

serde = {version = "1.0.218", features = ["derive"]}

[build-dependencies]
built = {version ="0.5.2", features = ["git2"]}

[dev-dependencies]
fgoxide = "0.5.0"
rstest = "0.12.0"
seq_io = { git = "https://github.com/nh13/seq_io.git", rev = "640160566a87b4d26e610a92026600b02218303d" }
tempfile = "3"
